# Kairos-Userspace

./: INSTALLATION.md  README.md  TDG-template.json
Shore-CompilerLLLVMUtils/: README.md  sample_build.sh  setup_environment.sh
Shore-CompilerLLLVMUtils/amcl/: CMakeLists.txt
Shore-CompilerLLLVMUtils/amcl/src/: amcl_node.cpp
Shore-CompilerLLLVMUtils/base_local_planner/: CMakeLists.txt
Shore-CompilerLLLVMUtils/cmake/: CompileTargetUtil.cmake  LLVMIRUtil.cmake
Shore-GraphBuilder/ROS-depenedency-analyzer/haros/: README.md  vis_script.sh
Shore-GraphBuilder/ROS-depenedency-analyzer/haros/haros/: export_manager.py  extractor.py
Shore-GraphBuilder/ROS-depenedency-analyzer/haros/haros/models/: joy.yaml
Shore-GraphBuilder/ROS-depenedency-analyzer/haros/haros_config/: index.yaml  parse_cache.json
Shore-GraphBuilder/ROS-depenedency-analyzer/haros/haros_config/pyflwor/: lextab.py
Shore-GraphBuilder/ROS-depenedency-analyzer/haros/src/pyflwor/pyflwor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Shore-GraphBuilder/SVF-program-analysis/: .gitignore  CMakeLists.txt  build.sh  run_sample.sh
Shore-GraphBuilder/SVF-program-analysis/include/CFL/: CFLVF.h
Shore-GraphBuilder/SVF-program-analysis/include/DDA/: DDAPass.h
Shore-GraphBuilder/SVF-program-analysis/include/Graphs/: GraphPrinter.h  PTACallGraph.h  SVFG.h  VFG.h
Shore-GraphBuilder/SVF-program-analysis/include/Util/: config.h
Shore-GraphBuilder/SVF-program-analysis/include/WPA/: WPAPass.h
Shore-GraphBuilder/SVF-program-analysis/lib/CFL/: CFLVF.cpp
Shore-GraphBuilder/SVF-program-analysis/lib/Graphs/: PTACallGraph.cpp
Shore-GraphBuilder/SVF-program-analysis/lib/MemoryModel/: SVFIR.cpp
Shore-GraphBuilder/SVF-program-analysis/lib/SVF-FE/: LLVMModule.cpp
Shore-GraphBuilder/SVF-program-analysis/tools/: CMakeLists.txt
Shore-GraphBuilder/SVF-program-analysis/tools/CFL/: cfl.cpp
Shore-GraphBuilder/SVF-program-analysis/tools/DDA/: dda.cpp
Shore-GraphBuilder/SVF-program-analysis/tools/Shore-Pass/: CMakeLists.txt
Shore-GraphBuilder/SVF-program-analysis/tools/Shore-Pass/DataflowGraphBuilder/: CMakeLists.txt  PassDataflowGraphBuilder.cpp  dependencyWalker.cpp  dependencyWalker.h
Shore-GraphBuilder/SVF-program-analysis/tools/Shore-Pass/TimingInstrumenter/: CMakeLists.txt  PassTimingInstrumenter.cpp  dependencyWalker.cpp  dependencyWalker.h
Shore-GraphBuilder/SVF-program-analysis/tools/WPA/: wpa.cpp
Shore-GraphBuilder/SVF-program-analysis/toy_examples/: a.out  amcl.bc  compile.sh  dataflow.dot  fact.ll  fact_opt.ll  fact_opt.s  factorial.c  helloworld.c  llvm13_bitcode.bc  outfile.ps  outout  swap.bc  swap.c  swap_opt.ll  testoo.sliced
Shore-Interface/: .gitignore  inject-CPU-overhead.sh
Shore-Interface/interface-lib/: Shore-user-interface-functions.cpp  Shore-user-interface-functions.h
Shore-Interface/kernel-interface-module/: Makefile  shore_kernel_support_module.c  shore_kernel_support_script.sh
Shore-TimingAnnotation/: build_instrumentationLib.sh
Shore-TimingAnnotation/annotationAPI/: annotation-API.cpp  annotation-API.h
Shore-TimingAnnotation/instrumentationLib/: CMakeLists.txt  ROS-interface.cpp  Shore-common.h  handling-policy.cpp  handling-policy.h  timestamp-vector.h  timing-correctness.cpp  timing-correctness.h
case-study/: compile_orb_slam_with_ros.sh  instrument_orbslam_with_pass.sh
case-study/ORB_SLAM3/: .gitignore  CMakeLists.txt  build.sh
case-study/ORB_SLAM3/Examples_old/ROS/ORB_SLAM3/: CMakeLists.txt
case-study/ORB_SLAM3/src/: LocalMapping.cc  System.cc
case-study/catkin_ws/src/: CMakeLists.txt
case-study/catkin_ws/src/orb_slam3_ros_wrapper/: .gitattributes  CMakeLists.txt
case-study/catkin_ws/src/orb_slam3_ros_wrapper/haros_result/: haros_vis.py  orb_slam3.yaml
case-study/catkin_ws/src/orb_slam3_ros_wrapper/haros_result/results/data/ORB_SLAM3/: configurations.json  packages.json  summary.json
case-study/catkin_ws/src/orb_slam3_ros_wrapper/haros_result/results/data/ORB_SLAM3/compliance/source/: orb_slam3_ros_wrapper.json  roscpp.json
case-study/catkin_ws/src/orb_slam3_ros_wrapper/haros_result/results/data/ORB_SLAM3/metrics/: orb_slam3_ros_wrapper.json
case-study/catkin_ws/src/orb_slam3_ros_wrapper/haros_result/results/projects/ORB_SLAM3/: haros.db
case-study/catkin_ws/src/orb_slam3_ros_wrapper/haros_result/results_bak/data/: projects.json
case-study/catkin_ws/src/orb_slam3_ros_wrapper/haros_result/results_bak/data/ORB_SLAM3/: configurations.json  metrics.json  packages.json  rules.json  summary.json
case-study/catkin_ws/src/orb_slam3_ros_wrapper/haros_result/results_bak/data/ORB_SLAM3/compliance/source/: orb_slam3_ros_wrapper.json  rospy.json
case-study/catkin_ws/src/orb_slam3_ros_wrapper/haros_result/results_bak/data/ORB_SLAM3/metrics/: orb_slam3_ros_wrapper.json  roscpp.json  rospy.json
case-study/catkin_ws/src/orb_slam3_ros_wrapper/haros_result/results_bak/projects/ORB_SLAM3/: haros.db
case-study/catkin_ws/src/orb_slam3_ros_wrapper/launch/: euroc_stereoimu.launch
case-study/catkin_ws/src/orb_slam3_ros_wrapper/src/: stereo_inertial_node.cc
case-study/haros/: configs_bak.yaml
case-study/plots/: vis_orb_slam_traj.py  vis_orb_slam_traj_errors.py
case-study/plots/data/: abnormal.txt  baseline.txt  dfa.txt  infocomm.txt
scripts/: pass_script.sh  ros_pass_script.sh
